--- a/demo/index.html
+++ b/demo/index.html
@@ -100,6 +100,11 @@
         <pre name="c70_result"></pre>
       </fieldset>
       <fieldset>
+        <legend>2.7.2 getRecommendedItems</legend>
+        <label><select name="c72_target"></select></label>
+        <pre name="c72_result"></pre>
+      </fieldset>
+      <fieldset>
         <legend>method</legend>
         <label><input type="radio" name="method" value="sim_distance">sim_distance</label>
         <label><input type="radio" name="method" value="sim_pearson" checked="checked">sim_pearson</label>
