--- a/demo/index.html
+++ b/demo/index.html
@@ -17,7 +17,7 @@
   </nav>
 
   <section id="chapter2">
-    <h1>2Í „‘E‚ğs‚¤</h1>
+    <h1>2ï¿½ï¿½ ï¿½ï¿½ï¿½Eï¿½ï¿½ï¿½sï¿½ï¿½</h1>
     <form id="demo-form-chapter2" class="demo-control">
       <textarea name="source">{
   "Lisa Rose": {
@@ -94,6 +94,10 @@
       <fieldset>
         <legend>2.5 transformPrefs</legend>
         <pre name="c50_result"></pre>
+      </fieldset>
+       <fieldset>
+        <legend>2.6 transformPrefs</legend>
+        <pre name="c60_result"></pre>
       </fieldset>
       <fieldset>
         <legend>2.7 calculateSimilarItems</legend>
