--- a/demo/index.html
+++ b/demo/index.html
@@ -108,6 +108,10 @@
         <label><select name="c72_target"></select></label>
         <pre name="c72_result"></pre>
       </fieldset>
+       <fieldset>
+        <legend>2.8 calculateSimilarItems</legend>
+        <pre name="c70_result"></pre>
+      </fieldset>
       <fieldset>
         <legend>method</legend>
         <label><input type="radio" name="method" value="sim_distance">sim_distance</label>
